07/06/2023 - Se añadió la obtención del usuario y la contraseña desde los campos de texto.

--- a/ClienteSistemaTutorias/Login.xaml
+++ b/ClienteSistemaTutorias/Login.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Inicio de sesión" Height="450" Width="800">
     <Grid>
         <Label Content="Universidad Veracruzana" HorizontalAlignment="Left" Margin="641,0,0,0" VerticalAlignment="Top" Background="#FF045CAC" Foreground="White" FontFamily="Verdana"/>
         <Label Content="Sistema" HorizontalAlignment="Left" Margin="545,80,0,0" VerticalAlignment="Top" Foreground="#FF7AB6EC" FontSize="30" FontFamily="Verdana"/>
@@ -16,7 +16,7 @@
         <PasswordBox x:Name="psbPassword" HorizontalAlignment="Left" Margin="535,290,0,0" VerticalAlignment="Top" Width="154"/>
         <Label Content="Usuario:" HorizontalAlignment="Left" Margin="581,215,0,0" VerticalAlignment="Top" Foreground="#FF4C7494" FontFamily="Verdana"/>
         <Label Content="Contraseña:" HorizontalAlignment="Left" Margin="570,265,0,0" VerticalAlignment="Top" Foreground="#FF4C7494" FontFamily="Verdana"/>
-        <Button x:Name="btnLogin" Content="Iniciar sesión" HorizontalAlignment="Left" Margin="569,338,0,0" VerticalAlignment="Top" Background="#FF045CAC" BorderBrush="#FF7AB6EC" Foreground="White" FontFamily="Verdana"/>
+        <Button x:Name="btnLogin" Content="Iniciar sesión" HorizontalAlignment="Left" Margin="569,338,0,0" VerticalAlignment="Top" Background="#FF045CAC" BorderBrush="#FF7AB6EC" Foreground="White" FontFamily="Verdana" Click="iniciarSesion"/>
         <Rectangle HorizontalAlignment="Left" Height="434" Stroke="Black" Fill="#045cac" VerticalAlignment="Center" Width="438"/>
     </Grid>
 </Window>
