--- a/ClienteSistemaTutorias/SeleccionarComentarios.xaml
+++ b/ClienteSistemaTutorias/SeleccionarComentarios.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias"
         mc:Ignorable="d"
-        Title="SeleccionarComentarios" Height="450" Width="800">
+        Title="SeleccionarComentarios" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Background="#bdd1de">
         <DataGrid x:Name="dgComentarios" AutoGenerateColumns="False" Margin="48,74,0,73" CanUserAddRows="False" HorizontalAlignment="Left" Width="443" IsReadOnly="True">
             <DataGrid.Columns>
