--- a/ClienteSistemaTutorias/MenuCoordinador.xaml
+++ b/ClienteSistemaTutorias/MenuCoordinador.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias"
         mc:Ignorable="d"
-        Title="MenuCoordinador" Height="450" Width="800">
+        Title="MenuCoordinador" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
         <Style x:Key="CustomButtonStyle" TargetType="Button">
@@ -105,11 +105,18 @@
             </StackPanel>
         </Button>
 
-        <Button HorizontalAlignment="Left" Margin="286,294,0,0" VerticalAlignment="Top" Style="{StaticResource CustomButtonStyle}" Click="clickBtnRegistrarProfesor">
+        <Button HorizontalAlignment="Left" Margin="164,294,0,0" VerticalAlignment="Top" Style="{StaticResource CustomButtonStyle}" Click="clickBtnRegistrarProfesor">
             <StackPanel Height="65" Width="230">
                 <Image Source="/Iconos/registro.png" Width="40" Height="40" Margin="0 0 5 0" />
                 <TextBlock Text="Registrar profesor" HorizontalAlignment="Center"/>
             </StackPanel>
+        </Button>
+
+        <Button HorizontalAlignment="Left" Margin="415,294,0,0" VerticalAlignment="Top" Style="{StaticResource CustomButtonStyle}" Click="clickBtnModificarFechasSesion">
+        <StackPanel Height="65" Width="230">
+            <Image Source="/Iconos/registro.png" Width="40" Height="40" Margin="0 0 5 0" />
+            <TextBlock Text="Modificar Fechas de Sesión" HorizontalAlignment="Center"/>
+        </StackPanel>
         </Button>
 
         <Label Content="Bienvenido" HorizontalAlignment="Left" Margin="342,17,0,0" VerticalAlignment="Top" Foreground="White" FontSize="20" FontFamily="Verdana"/>
