--- a/ClienteSistemaTutorias/MenuTutor.xaml
+++ b/ClienteSistemaTutorias/MenuTutor.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias"
         mc:Ignorable="d"
-        Title="MenuTutor" Height="450" Width="800">
+        Title="MenuTutor" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
         <Style x:Key="CustomButtonStyle" TargetType="Button">
