--- a/ClienteSistemaTutorias/RegistrarSolucion.xaml
+++ b/ClienteSistemaTutorias/RegistrarSolucion.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias"
         mc:Ignorable="d"
-        Title="RegistrarSolucion" Height="450" Width="800">
+        Title="RegistrarSolucion" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Background="#bdd1de">
 
         <TextBlock x:Name="tbNombre" Margin="100,20,244,375" Text=""/>
