--- a/ClienteSistemaTutorias/SeleccionarProblematica.xaml
+++ b/ClienteSistemaTutorias/SeleccionarProblematica.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias"
         mc:Ignorable="d"
-        Title="SeleccionarProblematica" Height="450" Width="800">
+        Title="SeleccionarProblematica" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Background="#bdd1de">
         <DataGrid x:Name="dgProblematicas" AutoGenerateColumns="False" Margin="52,41,260,94" CanUserAddRows="False" IsReadOnly="True">
             <DataGrid.Columns>
