--- a/ClienteSistemaTutorias/Avisos.xaml
+++ b/ClienteSistemaTutorias/Avisos.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias"
         mc:Ignorable="d"
-        Title="Avisos" Height="150" Width="300">
+        Title="Avisos" Height="150" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Label x:Name="lblAvisos"  Content="Hola" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Button x:Name="btnAceptar" Content="Aceptar" HorizontalAlignment="Center" Margin="0,88,0,0" VerticalAlignment="Top" Click="clicBtnSalir"/>
