--- a/ClienteSistemaTutorias/RegistrarHorarioSesion.xaml
+++ b/ClienteSistemaTutorias/RegistrarHorarioSesion.xaml
@@ -11,12 +11,12 @@
         <ComboBox x:Name="cmbTime" HorizontalAlignment="Left" Margin="568,280,0,0" VerticalAlignment="Top" Width="120"/>
         <Button Content="Asignar" HorizontalAlignment="Center" Margin="0,336,0,0" VerticalAlignment="Top" Click="clickBtnAsignar"/>
         <Button Content="Cancelar" HorizontalAlignment="Center" Margin="0,366,0,0" VerticalAlignment="Top" Click="clickBtnCancelar"/>
-        <Label Content="Nombre tutorado:" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" FontFamily="Verdana" FontSize="16"/>
-        <Label x:Name="lblNombreTutorado" Content="Label" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,39,0,0" Foreground="White" FontFamily="Verdana" FontSize="16"/>
-        <Label x:Name="lblApellidoPaternoTutorado" Content="Label" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,70,0,0" Foreground="White" FontFamily="Verdana" FontSize="16"/>
-        <Label x:Name="lblApellidoMaternoTutorado" Content="Label" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,100,0,0" Foreground="White" FontFamily="Verdana" FontSize="16"/>
-        <Label Content="Selecciona la sesión" HorizontalAlignment="Left" Margin="90,222,0,0" VerticalAlignment="Top" Foreground="White"/>
-        <Label Content="Selecciona la hora" HorizontalAlignment="Left" Margin="575,222,0,0" VerticalAlignment="Top" Foreground="White" Width="113"/>
+        <Label Content="Nombre tutorado:" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="Black" FontFamily="Verdana" FontSize="16"/>
+        <Label x:Name="lblNombreTutorado" Content="Label" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,39,0,0" Foreground="Black" FontFamily="Verdana" FontSize="16"/>
+        <Label x:Name="lblApellidoPaternoTutorado" Content="Label" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,70,0,0" Foreground="Black" FontFamily="Verdana" FontSize="16"/>
+        <Label x:Name="lblApellidoMaternoTutorado" Content="Label" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,100,0,0" Foreground="Black" FontFamily="Verdana" FontSize="16"/>
+        <Label Content="Selecciona la sesión" HorizontalAlignment="Left" Margin="90,222,0,0" VerticalAlignment="Top" Foreground="Black"/>
+        <Label Content="Selecciona la hora" HorizontalAlignment="Left" Margin="575,222,0,0" VerticalAlignment="Top" Foreground="Black" Width="113"/>
 
     </Grid>
 </Window>
